test/expected/explain_p_typedef_ri.out
typedef int &RI; explain RI *p
            ^
13: error: pointer to reference is illegal
